<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ConstructionReporter</string>
    <string name="action_settings">Settings</string>
    <string name="OptionA" tools:ignore="UnusedResources">Report Date</string>
    <string name="OptionB" tools:ignore="UnusedResources">Report Type</string>
    <string name="OptionC" tools:ignore="UnusedResources">Weather</string>
    <string name="MainMenu_A">Create New Report</string>
    <string name="MainMenu_B">View/Edit Existing Reports</string>
    <string name="MainMenu_D">View Created PDF Reports</string>
    <string name="OptionD">Manpower</string>
    <string name="OptionA0" tools:ignore="UnusedResources">Project Information</string>
    <string name="ProjectName">Project Name</string>
    <string name="ProjectAddress">Project Address</string>
    <string name="ProjectId">Project Number / ID</string>
    <string name="Discipline">Discipline</string>
    <string name="Photos">Report Photos</string>
    <string name="Activities">Activities</string>
    <string name="Equipment">Equipment</string>
    <string name="taskdescription">Activity Description</string>
    <string name="longtextprueba">Texto de prueba largo para demostrar como quedaria la descripcion de una actividad en la ventana y si estaria bien alienada</string>
    <string name="ReportDate">Report Date</string>
    <string name="ReportType">Report Type</string>
    <string name="Weather">Weather</string>
    <string name="ReportInfo">Report Information</string>
    <string name="photoinformation">Photo Information</string>
    <string name="ReportTime">Report Time</string>
    <string name="Start">Start Time</string>
    <string name="EndTime">End Time</string>
    <string name="ProjectLogo">Project Logo</string>
    <string name="Activity">Activity</string>
    <string name="CompanyLogo">Company Logo</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="clear">clear</string>
    <string name="accept">Accept</string>
    <string name="signature">Signature</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="imagedescription">Image Description</string>
    <string name="newreport">New Report</string>
    <string name="settings">Settings</string>
    <string name="ReportOriginatorName">Report Originator Name</string>
    <string name="ReportOriginator">Report Originator</string>
    <string name="ReportOriginatorPosition">Report Originator Position</string>
    <string name="ReportOriginatorCompany">Report Originator Company</string>
    <string name="ReportOriginatorSignature">Report Originator\nSignature</string>
    <string name="IncludeManpowerInReport">Include Manpower\nIn Report</string>
    <string name="IncludeEquipmentInReport">Include Equipment\nIn Report</string>
    <string name="IncludePhotosInReport">Include Photos\nIn Report</string>
    <string name="QualityOfPhotos">Quality of Photos</string>
    <string name="Open">Open</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Back">Back</string>
    <string name="AddActivityToReport">Add Activity To Report</string>
    <string name="PhotoDescription">Photo Description</string>
    <string name="NewReport">New Report</string>
    <string name="EditReport">Edit Report</string>
    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>
    <string-array name="photoquality">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="holiday">
        <item>09/04/17</item>
        <item>10/09/17</item>
        <item>11/10/17</item>
        <item>11/23/17</item>
        <item>11/24/17</item>
        <item>12/25/17</item>
        <item>01/01/18</item>
        <item>01/15/18</item>
        <item>02/12/18</item>
        <item>02/19/18</item>
        <item>05/28/18</item>
        <item>07/04/18</item>
        <item>09/03/18</item>
        <item>10/08/18</item>
        <item>11/12/18</item>
        <item>11/22/18</item>
        <item>11/23/18</item>
        <item>12/25/18</item>
        <item>01/01/19</item>
    </string-array>

    <string name="level00">level00</string>
    <string name="level01">level01</string>
    <string name="level02">level02</string>

    <string name="level10">level10</string>
        <string name="level101">level101</string>
            <string name="level1011">level1011</string><!--info-->
            <string name="level1012">level1012</string><!--activities-->
            <string name="level1013">level1013</string><!--equipmanpower-->
            <string name="level1014">level1014</string><!--photos-->
        <string name="level102">level102</string>
        <string name="level103">level103</string>

    <string name="level20">level20</string>
        <string name="level201">level201</string>
            <string name="level2011">level2011</string>
            <string name="level2012">level2012</string>
            <string name="level2013">level2013</string>
        <string name="level202">level202</string>
        <string name="level203">level203</string>

    <string name="level30">level30</string>
    <string name="level40">level40</string>
    <string name="level50">level50</string>
    <string name="level60">level60</string>

    <string name="level09">level09</string>

    <string name="IncludeConstructionDateInReport">Include Construction Date\nin Report</string>
    <string name="app_name_shorcut">Reporter</string>
    <string name="MainMenu_E">Edit Contractors</string>
    <string name="GeneratingPDFReport">Generating PDF\nReport</string>
    <string name="Location">Location</string>
    <string name="TypeOfWork">Type of Work</string>
    <string name="ActivityID">Activity ID</string>
    <string name="Contractor">Contractor</string>
    <string name="IncludePhotoDateAndDescription">Include Photo Date\nand Description</string>
    <string name="DailyQCReport">Daily QC Report</string>
    <string name="DailyQAReport">Daily QA Report</string>
    <string name="InspectionMaterialChecklist">Inspection Material Checklist</string>
    <string name="SteelErectionChecklist">Steel Erection Checklist</string>
    <string name="SafetyObservation">Safety Observation</string>
    <string name="EquipmentManpower">Equipment / Manpower</string>
    <string name="TimeIn">Time In</string>
    <string name="TimeOut">Time Out</string>
    <string name="Subcontractor">Subcontractor</string>
    <string name="ContractNo">Contract No</string>
    <string name="Section">Section</string>
    <string name="Sky">Sky</string>
    <string name="Wind">Wind</string>
    <string name="Precipitation">Precipitation</string>
    <string name="Temperature">Temperature</string>
    <string name="High">High</string>
    <string name="Low">Low</string>
    <string name="StationLocation">Station / Location</string>
    <string name="StructureNo">Structure No.</string>
    <string name="DrawingSpecification">Drawing / Specification</string>
    <string name="compliance">Compliance</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ActivityDescription">Activity Description</string>
    <string name="nopeople"># People</string>
    <string name="nohours"># Hours</string>
    <string name="ActivitiesIDs">Activities IDs</string>
    <string name="IncludePhotoDate">Include Photo Date</string>
    <string name="CreateNewTimesheet">Create New Timesheet</string>
    <string name="ViewEditExistingTimesheets">View/Edit Existing Timesheets</string>
    <string name="ViewCreatedPDFTimesheets">View Created PDF Timesheets</string>
    <string name="TimesheetInformation">Timesheet Information</string>
    <string name="Labor">Labor</string>
    <string name="TimesheetDate">Timesheet Date</string>
    <string name="Time">Time</string>
    <string name="StartBreak">Start Break</string>
    <string name="EndBreak">End Break</string>
    <string name="ForemanFirstName">Foreman First Name</string>
    <string name="ForemanLastName">Foreman Last Name</string>
    <string name="SafetyDocumentation">Safety Documents</string>
    <string name="ProductionDocuments">Production Documents</string>
    <string name="QCDocuments">QC Documents</string>
    <string name="QADocuments">QA Documents</string>

    <string name="S_MainFolder">ConstructionReporterSFI</string>
    <integer name="reporttypenumber">2</integer>
    <string-array name="reporttypes">
        <item>QCReport</item>
        <item>QAReport</item>
    </string-array>

    <string-array name="safetydocs">
        <item>Safety Observation Checklist</item>
        <item>Equipment Inspection Checklist</item>
        <item>Near Miss Report</item>
        <item>Incident Report</item>
    </string-array>

    <string-array name="qcdocs">
        <item>QC Daily Reports</item>
        <item>Inspection Notification</item>
        <item>Material Inspection Checklist</item>
        <item>RFI</item>
    </string-array>

    <string-array name="qadocs">
        <item>QA Daily Report</item>
        <item>Deficiency Report</item>
        <item>Non-Conformance Report</item>
    </string-array>

    <string-array name="proddocs">
        <item>Pre-task Plan</item>
        <item>Timesheet</item>
        <item>Field Requisition</item>
        <item>Time and Material Ticket</item>
    </string-array>

    <integer name="listsofoptions">25</integer>

</resources>
