<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/settings_gray">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="80dp"
        android:background="@color/white">
        <!--activityid-->
        <TextView
            android:layout_margin="@dimen/dp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ActivityID"
            style="@style/textstyle_A"/>
        <EditText
            android:id="@+id/qcactivity_in2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            style="@style/textstyle_B"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"
            android:padding="@dimen/dp5" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/settings_gray"
            android:layout_marginTop="@dimen/dp10"/>
        <!--drawing / specification-->
        <TextView
            android:layout_margin="@dimen/dp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DrawingSpecification"
            style="@style/textstyle_A"/>
        <EditText
            android:id="@+id/qcactivity_in1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            style="@style/textstyle_B"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"
            android:padding="@dimen/dp5" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/settings_gray"
            android:layout_marginTop="@dimen/dp10"/>
        <!--compliance-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:orientation="horizontal"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                style="@style/textstyle_A"
                android:layout_height="wrap_content"
                android:text="@string/compliance"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/Yes"
                style="@style/textstyle_A"
                android:gravity="end"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/chkbox_yes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/No"
                style="@style/textstyle_A"
                android:gravity="end"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/chkbox_no"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/settings_gray"
            android:layout_marginTop="@dimen/dp10"/>
        <!--description-->
        <TextView
            android:layout_margin="@dimen/dp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ActivityDescription"
            style="@style/textstyle_A"/>
        <EditText
            android:id="@+id/qcactivity_in3"
            android:minHeight="300dp"
            android:gravity="top"
            tools:text="Textodepruebtla para ver qeu f"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightgray"
            style="@style/textstyle_B"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"
            android:padding="@dimen/dp5" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/settings_gray"
            android:layout_marginTop="@dimen/dp10"/>
    </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabaccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorSecondary"
        android:src="@drawable/ic_check_black_24dp"
        android:layout_margin="@dimen/dp10"
        android:layout_gravity="end|bottom" />
</FrameLayout>