<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:background="@color/settings_gray"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/dp5"
            android:layout_height="wrap_content"
            android:weightSum="11">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="5"
                style="@style/textstyle_C"
                android:background="@drawable/boxwithborder_lightbackground"
                android:text="@string/Equipment"
                android:padding="@dimen/dp5"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                style="@style/textstyle_C"
                android:background="@drawable/boxwithborder_lightbackground"
                android:text="@string/nopeople"
                android:padding="@dimen/dp5"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                style="@style/textstyle_C"
                android:background="@drawable/boxwithborder_lightbackground"
                android:text="@string/nohours"
                android:padding="@dimen/dp5"
                android:layout_height="match_parent" />
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10"
            android:paddingBottom="80dp"
            android:id="@+id/recyclerview_manpower"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabaddmanpower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorSecondary"
        android:src="@drawable/ic_person_add_black_24dp"
        android:layout_alignTop="@+id/fabaccept"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabaccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorSecondary"
        android:src="@drawable/vector_return"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"/>
</android.support.design.widget.CoordinatorLayout>