<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <RelativeLayout
                android:id="@+id/timesheet_rellay1"
                android:background="@drawable/selected_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/TextOptionA"
                    style="@style/textstyle_A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10"
                    android:text="@string/CreateNewTimesheet" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_right_black_24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/TextOptionA"
                    android:background="@color/settings_gray"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/timesheet_rellay2"
                android:background="@drawable/selected_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/TextOptionB"
                    style="@style/textstyle_A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp10"
                    android:text="@string/ViewEditExistingTimesheets" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_right_black_24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/TextOptionB"
                    android:background="@color/settings_gray"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/timesheet_rellay3"
                android:background="@drawable/selected_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/TextOptionD"
                    style="@style/textstyle_A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/ViewCreatedPDFTimesheets" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_right_black_24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/TextOptionD"
                    android:background="@color/settings_gray"/>
            </RelativeLayout>
            <!--<RelativeLayout
                android:id="@+id/RelLay_EditContractors"
                android:background="@drawable/selected_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/TextOptionE"
                    style="@style/textstyle_A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/MainMenu_E" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_right_black_24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/TextOptionE"
                    android:background="@color/settings_gray"/>
            </RelativeLayout>-->
        </LinearLayout>

    <!--<com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/add_banner_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-9978137837326968/4341887116">
    </com.google.android.gms.ads.AdView>-->

</RelativeLayout>

